# performance-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: daily.yml  main.yml  pages.yml
bench/: CMakeLists.txt  exec.ts  run.ts  setup.ts
bench/parser/: CMakeLists.txt  Main.cpp  README.md  Source.cpp  Source.hpp  run.ts
bench/parser/src/: builtins.ts  compiler.ts  diagnosticMessages.generated.ts  index-wasm.ts  module.ts  program.ts  types.ts
bench/parser/src/glue/: binaryen.d.ts
bench/transpose/: CMakeLists.txt  Main.cpp  run.ts
bench/transpose/src/: index.ts
data/darwin-arm64/: 250923-warpo@d1b622a+wasm-compiler@58ac45f  250925-warpo@821f96f+wasm-compiler@02db210  250928-warpo@120d530+wasm-compiler@d66b1e7  251013-warpo@b9f481a+wasm-compiler@eee82e9  251013-warpo@b9f481af87f7599bf3c1cc5f2b7bd02924dc9213+wasm-compiler@eee82e9  251014-warpo@2377d6a+wasm-compiler@eee82e9  251020-warpo@1a75fca+wasm-compiler@eee82e9  251021-warpo@cd480ca+wasm-compiler@eee82e9  251022-warpo@f28bcfc+wasm-compiler@8c3b947  251023-warpo@52fc43e+wasm-compiler@8c3b947  251024-warpo@a5b3998+wasm-compiler@8c3b947  251025-warpo@62c5203+wasm-compiler@8c3b947  251026-warpo@d335440+wasm-compiler@8c3b947  251027-warpo@31180dc+wasm-compiler@6098660  251028-warpo@fa0b5d8+wasm-compiler@6098660  251029-warpo@e8f0c37+wasm-compiler@a9471b9  251030-warpo@17ca85d+wasm-compiler@e3b12c3  251031-warpo@e20a084+wasm-compiler@75a60ad  251101-warpo@980c5a5+wasm-compiler@75a60ad  (+137 more)
render/: App.tsx  index.d.ts  render.ts
(+312 files in other folders)
